# INSIA_msg

./: CMakeLists.txt  README.md  package.xml
JKU_msgs/: JoyJKU.msg
gps_msg/: RMC.msg
mdef/: ModoMision.msg
mdef/escribano/: Accion.msg  AmmoCount.msg  AmmoType.msg  BrakeStatus.msg  CameraSelection.msg  Designation.msg  Fase.msg  FireMode.msg  FireStatus.msg  FocusCommand.msg  LaserRange.msg  Mision.msg  Misiones.msg  MovementStatus.msg  MovementType.msg  PositionTurret.msg  Tarea.msg  TareaCdP.msg  WeaponType.msg  ZoomCommand.msg
msg/: CAN.msg  CANEthStatus.msg  CANGroup.msg  ControladorFloat.msg  ControladorStr.msg  EPOSAnalog.msg  EPOSConsigna.msg  EPOSDigital.msg  EPOSStatus.msg  GestionMision.msg  IOAnalogue  IOAnalogue.msg  MapPointList.msg  Mappoint.msg  MasterSwitch.msg  ModoMision.msg  OpenLoop.msg  Override.msg  PetConduccion.msg  PetConduccionDevice.msg  RecCommand.msg  ReceiveMUTT.msg  RequestMUTT.msg  Telemetry.msg  Telemetry2.msg
src/: pub.py  sub.py
srv/: BrakeCalibration.srv  CargarFicheroMisiones.srv  GenerateMaps.srv  ObtenerAlarmas.srv  ObtenerEstados.srv  RequestCANMessage.srv
